Add Lecture 9 dependencies

--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -10,8 +10,13 @@ keras==2.4.3
 tensorflow==2.4.1
 tensorflow_hub
 seaborn
-scikit-learn
-pandas
-numpy
-matplotlib
+scikit-learn~=0.24.1
+pandas~=1.1.2
+numpy~=1.19.2
+matplotlib~=3.3.1
 notebook
+scipy~=1.4.1
+scikit-image~=0.16.2
+torch~=1.7.0
+Pillow~=8.10.0
+
