--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -1,5 +1,6 @@
 channels:
   - conda-forge
+  - pytorch
   - defaults
 dependencies:
   - radiant-mlhub >=0.1.3,<1.0.0
@@ -11,7 +12,6 @@ dependencies:
   - boto3
   - pyproj
   - keras==2.4.3
-  - tensorflow==2.4.1
   - tensorflow-hub
   - seaborn
   - scikit-learn
@@ -19,3 +19,10 @@ dependencies:
   - numpy
   - matplotlib
   - jupyter
+  - scipy >=1.4.1,<1.5
+  - scikit-image >=0.16.2,<0.17
+  - pytorch >=1.7.0,<1.8
+  - Pillow >=8.1.0,<8.2
+  - pip
+  - pip:
+    - tensorflow >=2.4.1,<2.5
