--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -7,7 +7,7 @@ arrow
 boto3
 pyproj
 keras==2.4.3
-tensorflow==2.4.1
+tensorflow~=2.4
 tensorflow_hub
 seaborn
 scikit-learn~=0.24.1
@@ -18,5 +18,5 @@ notebook
 scipy~=1.4.1
 scikit-image~=0.16.2
 torch~=1.7.0
-Pillow~=8.10.0
+Pillow~=8.1
 
