--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,3 +1,4 @@
+tensorflow==2.4.1
 radiant-mlhub~=0.1.3
 rasterio
 fiona
@@ -7,7 +8,6 @@ arrow
 boto3
 pyproj
 keras==2.4.3
-tensorflow~=2.4
 tensorflow_hub
 seaborn
 scikit-learn~=0.24.1
